--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.9",
     "morgan": "~1.9.1"
+  },
+  "engines": {
+    "node": "12.19.0"
   }
 }
