--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "resapi",
   "version": "0.0.0",
+  "engines": {
+    "node": "12.x"
+  },
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
@@ -16,8 +19,5 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.9",
     "morgan": "~1.9.1"
-  },
-  "engines": {
-    "node": "12.19.0"
   }
 }
